--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,9 @@
 [deps]
+Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+Cthulhu = "f68482b8-f384-11e8-15f7-abe071a5a75f"
+KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 Metal = "dde4c033-4e86-420c-a63e-0dd931031962"
+SplittableRandoms = "8efc31e9-3fb0-4277-b18c-5a3d5d07abad"
+StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
