Simplify config, nf fixes

--- a/nextflow/nextflow.config
+++ b/nextflow/nextflow.config
@@ -1,35 +1,22 @@
 profiles {
     standard {
-    	env.JULIA_PKG_USE_CLI_GIT = 'true'
         process {
             executor  = 'local'
         }
     }
-    // Sockeye or Canada Alliance
+
     cluster {
-	    env.JULIA_PKG_USE_CLI_GIT = 'true'
-        //apptainer.enabled = true
-        //apptainer.autoMounts = true
-    	process {
-            scratch        = true
-            executor       = 'slurm'
-            //container      = 'docker://alexandrebouchardcote/default:0.1.6'
-            clusterOptions = "$CLUSTER_OPTIONS"
-            //module         = 'apptainer'
-            cpus           = 1
-            memory         = 4.GB
-            time           = '2h'
+    	process { 
+            executor = 'slurm'
+            cpus = 1
+            memory = 4.GB
+            time = 20.min
+            clusterOptions = ['--nodes 1', '--account st-alexbou-1']
+        }
+        executor {
+            name = 'slurm'
+            queueSize = 500
         }
     }
 }
 
-executor {
-    $local {
-        cpus = 4
-        //memory = 12.GB
-    }
-    $slurm {
-        submitRateLimit = '120/1min'
-        queueSize = 500
-    }
-}
